# rust-portfolio-optimizer

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
data/: historical_prices.csv
docs/: optimization_flow.mmd
examples/: portfolio_optimization.rs
