[package]
name = "rpo-core"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Demetrios Lafis"]

[dependencies]
nalgebra = { workspace = true }
log = { workspace = true }
rpo-data = { path = "../data" }
rpo-optimizer = { path = "../optimizer" }



anyhow = { workspace = true }


polars = { workspace = true }
